# pyopenchannel

./: CONTRIBUTING.md  FVM_IMPLEMENTATION_ROADMAP.md  FVM_RVF_INTEGRATION_SUMMARY.md  GVF_IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini
docs/: GVF_API_Reference.md  GVF_User_Guide.md  README.md
examples/: backwater_analysis_demo.py  complete_gate_flow_analysis.py  diversion_dam_complete_profile.py  fvm_api_concept.py  fvm_boundary_conditions_demo.py  fvm_solver_demo.py  fvm_solver_simple_demo.py  fvm_validation_demo.py  fvm_validation_simple_demo.py  gate_flow_fvm_comparison_demo.py  gate_flow_fvm_integration_demo.py  gate_to_hydraulic_jump_simulation.py  gvf_basic_usage.py  hydraulic_jump_visualization.py  ogee_diversion_dam_accurate_fvm.py  ogee_diversion_dam_accurate_fvm.py.backup  ogee_diversion_dam_fixed_fvm.py  ogee_diversion_dam_fvm_analysis.py  ogee_diversion_dam_rigorous_analysis.py  ogee_diversion_dam_visible_profile.py  ogee_weir_fvm_profile_demo.py  ogee_weir_profile_visualization.py  plot_utils.py  rigorous_spillway_demo.py  rvf_2_point_demonstration.py  rvf_fvm_comparison.py  rvf_fvm_integration_demo.py  rvf_hydraulic_jump_analysis.py  rvf_submerged_ogee_weir_analysis.py  weir_flow_fvm_comparison_demo.py  weir_flow_fvm_integration_demo.py
plots/: README.md
src/pyopenchannel/: __init__.py  constants.py  exceptions.py  geometry.py  hydraulics.py  spillway_utils.py  units.py
src/pyopenchannel/rvf/: __init__.py  core.py  gates.py  weirs.py
tests/: test_geometry.py  test_hydraulics.py
(+7 files in other folders)
